[gd_scene load_steps=10 format=3 uid="uid://bybf0k42g5qwn"]

[ext_resource type="Script" path="res://general/state_machine/state_machine.gd" id="1"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_6/states/add_by_circles.gd" id="2"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_6/program.gd" id="3"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_2/states/verify_start.gd" id="4"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_2/states/select_start.gd" id="5"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_6/states/drag_result.gd" id="6"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_6/state_data.gd" id="7"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_6/states/verify_circle_addition.gd" id="8"]
[ext_resource type="Script" path="res://content/basic_addition/levels/basic_addition_2/states/verify_result.gd" id="9"]

[node name="LevelProgram" type="Node"]
script = ExtResource("3")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1")
SetupData = ExtResource("7")
_auto_activate = false

[node name="SelectStart" type="Node" parent="StateMachine"]
script = ExtResource("5")

[node name="VerifyStart" type="Node" parent="StateMachine"]
script = ExtResource("4")

[node name="AddByCircles" type="Node" parent="StateMachine"]
script = ExtResource("2")

[node name="VerifyAddition" type="Node" parent="StateMachine"]
script = ExtResource("8")

[node name="DragResult" type="Node" parent="StateMachine"]
script = ExtResource("6")

[node name="VerifyResult" type="Node" parent="StateMachine"]
script = ExtResource("9")
